packages/agent-native-bridge/include/HaskellAgentBridge.h

typedef struct ha_utf8_slice {
    const uint8_t *bytes;
    size_t length;
} ha_utf8_slice;
typedef struct ha_connection_answer {
    ha_utf8_slice identifier;
    ha_utf8_slice value;
} ha_connection_answer;
typedef struct ha_connection_field {
    ha_utf8_slice identifier;
    ha_utf8_slice label;
    int32_t kind; /* 0 text, 1 secret (never echoed) */
    int32_t required;
} ha_connection_field;
typedef struct ha_connection_item {
    ha_utf8_slice identifier;
    ha_utf8_slice title;
    ha_utf8_slice detail;
    int32_t selected;
} ha_connection_item;
typedef struct ha_connection_snapshot {
    /* 0 catalog, 1 search, 2 credentials, 3 challenge, 4 redirect,
     * 5 selection, 6 connected, 7 waiting */
    int32_t phase;
    ha_utf8_slice session_id;
    ha_utf8_slice title;
    ha_utf8_slice message;
    ha_utf8_slice redirect_url;
    uint32_t poll_after_milliseconds;
    const ha_connection_field *fields;
    size_t field_count;
    const ha_connection_item *items;
    size_t item_count;
} ha_connection_snapshot;